<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Font Challenge View Component</string>
    <string name="action_settings">Settings</string>

    <string name="whereLogoGoes">[ Logo Goes Here ]</string>

    <string name="btn_start_quiz">Start</string>
    <string name="btn_lvl_easy">EASY</string>
    <string name="btn_lvl_medium">MEDIUM</string>
    <string name="btn_lvl_hard">HARD</string>

    <string name="title_activity_next">Next Activity</string>
    <string name="activity_reached">The next activity page has been reached..</string>

</resources>
