<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@color/bg_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_img_view_size"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="35dp"
        android:textSize="20dp"
        android:text="@string/whereLogoGoes"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="0dp" >
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/bg_color"
            android:layout_width="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_height="wrap_content" >
            <ImageButton
                android:id="@+id/btn_lvl_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/main_btn_spacing"
                android:src="@drawable/btn_lvl_easy"
                android:background="@android:color/transparent"
                android:onClick="btnLevelClicked"
                />

            <ImageButton
                android:id="@+id/btn_lvl_med"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_lvl_med"
                android:background="@android:color/transparent"
                android:onClick="btnLevelClicked"
                />

            <ImageButton
                android:id="@+id/btn_lvl_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_btn_spacing"
                android:src="@drawable/btn_lvl_hard"
                android:background="@android:color/transparent"
                android:onClick="btnLevelClicked"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center" >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginRight="@dimen/main_btn_text_spacing"
                android:onClick="btnLevelClicked"
                android:textColor="@color/main_btn_text_color"
                android:text="@string/btn_lvl_easy" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="btnLevelClicked"
                android:textColor="@color/main_btn_text_color"
                android:text="@string/btn_lvl_medium" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginLeft="10dp"
                android:onClick="btnLevelClicked"
                android:textColor="@color/main_btn_text_color"
                android:text="@string/btn_lvl_hard" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="center" >
        <TextView
            android:id="@+id/textview_display_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:paddingBottom="0dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="35dp"
            />
        <TextView
            android:id="@+id/textview_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp"
            android:gravity="center"
            android:textSize="23dp"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:padding="13dp"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:text="@string/btn_start_quiz"
            android:onClick="btnStartClicked"/>
    </LinearLayout>

</LinearLayout>
